Fixed nutrition facts value mobile text aligning

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://www.deary.eu
 Author: Taifuun OÜ
 Author URI: https://www.taifuun.ee
 Description: Deary theme by Taifuun
-Version: 1.2.0
+Version: 1.2.1
 Tested up to: 5.4 
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
@@ -1389,6 +1389,7 @@ main#primary {
             justify-content: flex-end;
     padding: 0 0 0 20px;
     width: 50%;
+    text-align: right;
   }
 }
 
